@@ -25,7 +25,7 @@
 #define BS2BVERSION_H
 
 #define BS2B_VERSION_MAJOR    3
-#define BS2B_VERSION_MINOR    0
+#define BS2B_VERSION_MINOR    1
 #define BS2B_VERSION_RELEASE  0
 
 #define BS2B_STRINGIFY_HELPER(X) #X
