@@ -1,3 +1,7 @@
+2009-05-19 Boris Mikhaylov <http://www.tmn.ru/~bor>
+	* bs2bstream - add switch of crossfeed level by feed level
+	and cut frequency.
+
 2009-05-18 Boris Mikhaylov <http://www.tmn.ru/~bor>
 	* Fixed for higher compile warning level.
 	* Extended cut frequency set from [300..1000] to [300..2000] Hz
